<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Sound Notification">

        <SwitchPreference
            android:defaultValue="true"
            app:key="@string/pref_key_notify"
            app:summary="Notifikasi orderan ketika masuk akan berdering"
            app:title="Notifikasi Orderan" />

    </PreferenceCategory>


    <PreferenceCategory app:title="Sound">
        <ListPreference
            app:defaultValue="@string/pref_sound1"
            app:entries="@array/sound"
            app:entryValues="@array/sound_value"
            app:key="@string/pref_key_notif"
            app:title="Pilih sound notifikasi orderan masuk"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="@string/pref_duration_10"
            app:entries="@array/sound_duration"
            app:entryValues="@array/duration_value"
            app:key="@string/pref_key_notif_duration"
            app:title="Durasi sound"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>